src/test/ui/in-band-lifetimes/E0688.stderr
error[E0688]: cannot mix in-band and explicit lifetime definitions
  --> $DIR/E0688.rs:4:28
   |
LL | fn foo<'a>(x: &'a u32, y: &'b u32) {}
   |        --                  ^^ in-band lifetime definition here
   |        |
   |        explicit lifetime definition here

error[E0688]: cannot mix in-band and explicit lifetime definitions
  --> $DIR/E0688.rs:9:44
   |
LL |     fn bar<'b>(x: &'a u32, y: &'b u32, z: &'c u32) {}
   |            --                              ^^ in-band lifetime definition here
   |            |
   |            explicit lifetime definition here

error[E0688]: cannot mix in-band and explicit lifetime definitions
  --> $DIR/E0688.rs:12:14
   |
LL | impl<'b> Foo<'a> {
   |      --      ^^ in-band lifetime definition here
   |      |
   |      explicit lifetime definition here

error: aborting due to 3 previous errors

